Hooks on keydown, needed to handle shift & others, still not prevented history.back()

--- a/renJS/tOUCH.css
+++ b/renJS/tOUCH.css
@@ -58,8 +58,8 @@
 
 }
 #KeyboardLayoutTableRow2 {
-    margin-left: 10px;
+    margin-left: 37px;
 }
 #KeyboardLayoutTableRow3 {
-    margin-left: 20px;
+    margin-left: 42px;
 }
